--- a/angular-app/src/main/webapp/WEB-INF/web.xml
+++ b/angular-app/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,32 @@
         <param-value>WEB-INF/*-context.xml</param-value>
     </context-param>
 
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>actions</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>actions</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>jersey-servlet</servlet-name>
@@ -30,4 +53,8 @@
         <servlet-name>jersey-servlet</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>/publico/index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
