--- a/trunk/angular-app/pom.xml
+++ b/trunk/angular-app/pom.xml
@@ -32,13 +32,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.1</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- spring framework -->
         <dependency>
@@ -256,6 +249,10 @@
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-context</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>spring-aop</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -286,6 +283,29 @@
             <version>1.1.2</version>
         </dependency>
 
+
+        <!-- Test -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -311,11 +331,13 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.0</version>
                 <configuration>
-                    <path>lab</path>
+                    <path>/lab</path>
                     <port>8081</port>
                     <uriEncoding>UTF-8</uriEncoding>
+                    <contextFile>${project.build.directory}/context.xml</contextFile>
                     <systemProperties>
                         <user.timezone>America/Mexico_City</user.timezone>
+                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                     </systemProperties>
                 </configuration>
             </plugin>
